<resources>
    <string name="app_name">QuakeReport</string>
    <string name="empty_message">No earthquakes found.</string>
    <string name="no_internet">No internet connection.</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Earthquake Settings</string>

    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <string name="setting_earthquake_limit_label">Number of earthquake limitation</string>
    <string name="setting_earthquake_limit_key" translatable="false">limit_earthquakes</string>
    <string name="setting_earthquake_limit_default" translatable="false">100</string>

    <string name="setting_start_time_label">Set start time</string>
    <string name="setting_start_time_key">start_time</string>
    <string name="setting_start_time_default">2017-1-1</string>

    <string name="setting_end_time_label">Set end time</string>
    <string name="setting_end_time_key">end_time</string>
    <string name="setting_end_time_default">2017-1-1</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

</resources>
