<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/setting_earthquake_limit_default"
        android:inputType="number"
        android:key="@string/setting_earthquake_limit_key"
        android:selectAllOnFocus="true"
        android:title="@string/setting_earthquake_limit_label" />

    <com.example.android.quakereport.DatePreference
        android:defaultValue="@string/setting_start_time_default"
        android:key="@string/setting_start_time_key"
        android:title="@string/setting_start_time_label" />

    <com.example.android.quakereport.DatePreference
        android:defaultValue="@string/setting_end_time_default"
        android:key="@string/setting_end_time_key"
        android:title="@string/setting_end_time_label" />

</PreferenceScreen>